# GSDL

./: .gitignore  CMakeLists.txt  GConfig.cpp  GConfig.h  GVentana.cpp  GVentana.h  README.md  Tipos.h  prueba.cpp
fuente/: CMakeLists.txt  GConfig.cpp  GConfig.h  GSDL.h  GVentana.cpp  GVentana.h  Makefile  Tipos.h  cmake_install.cmake  libgsdl  prueba.cpp
fuente/elementos/: BUGS  CMakeLists.txt  GBoton.cpp  GBoton.h  GDesplegable.cpp  GElemento.h  GTexto.cpp  GTexto.h  Makefile  cmake_install.cmake
fuente/motor/: CMakeLists.txt  GMotor.cpp  GMotor.h  GRenderizador.cpp  GRenderizador.h  Makefile  cmake_install.cmake
fuente/utilidades/: CMakeLists.txt  GCColor.cpp  Makefile  cmake_install.cmake
gsdl/: CMakeLists.txt  GConfig.cpp  GConfig.h  GSDL.h  GVentana.cpp  GVentana.h  Tipos.h
gsdl/elementos/: CMakeLists.txt  EntradaTexto.cpp  EntradaTexto.h  GBoton.cpp  GBoton.h  GCampoTexto.cpp  GCampoTexto.h  GDesplegable.h  GElemento.h  GTexto.cpp  GTexto.h  Makefile  cmake_install.cmake
gsdl/motor/: CMakeLists.txt  GMotor.cpp  GMotor.h  GRenderizador.cpp  GRenderizador.h  Makefile  cmake_install.cmake
gsdl/utilidades/: CMakeLists.txt  GCColor.h
gsdl/utilidades/eventos/: GEscuchadorMouse.h  GEscuchadorTeclado.h  GEvento.h  GEventoMouse.h  GEventoTeclado.h
motor/: GRenderizador.cpp  GRenderizador.h
objetos/: GTexto.cpp  GTexto.h
producto/: Makefile  cmake_install.cmake  prueba
producto/codigo/: Makefile  cmake_install.cmake
producto/codigo/motor/: Makefile
producto/gsdl/: Makefile  cmake_install.cmake
producto/gsdl/elementos/: Makefile  cmake_install.cmake
producto/gsdl/motor/: Makefile  cmake_install.cmake
producto/gsdl/utilidades/: Makefile  cmake_install.cmake
